# safe-in-cloud-templates

./: .gitignore  README.md  SafeInCloud_notes.adoc
converter/: to-keepass.xsl
fr/: CarteGrise.xml
keepass/: .gitignore  conv-xsl.sh  pyproject.toml
keepass/xsl/: to-keepass.xsl
protonpass/: .gitignore  lorem.txt  sacxml_to_protonpass_xmlized_json.sh  sacxml_to_protonpass_xmlized_json.xsl  yq-xml2yaml.sh
reserve/: b64toInt.py  converter.py
