[project]
name = "converter"
version = "0.1.0"
description = "SafeInCloud to keepass converter"
authors = [
    {name = "Pascal Munerot",email = "pascal.munerot@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
